--- a/java/client/pom.xml
+++ b/java/client/pom.xml
@@ -14,13 +14,12 @@
     <properties>
         <swagger-input-file>${project.basedir}/../../openapi/idcloud-openapi.json</swagger-input-file>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <swagger-core-version>1.5.9</swagger-core-version>
+        <swagger-core-version>1.5.21</swagger-core-version>
         <swagger-codegen-maven-plugin-version>2.2.1</swagger-codegen-maven-plugin-version>
-        <jackson-version>2.7.5</jackson-version>
-        <jodatime-version>2.9.4</jodatime-version>
-        <jersey-version>2.24.1</jersey-version>
-        <junit-version>4.12</junit-version>
-        <slf4j-version>1.7.21</slf4j-version>
+        <jackson-version>2.9.7</jackson-version>
+        <jodatime-version>2.10.1</jodatime-version>
+        <jersey-version>2.25.1</jersey-version>
+        <slf4j-version>1.7.25</slf4j-version>
         <java-version>1.8</java-version>
     </properties>
 
@@ -35,6 +34,11 @@
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
+            <version>${jersey-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
             <version>${jersey-version}</version>
         </dependency>
         <dependency>
@@ -70,14 +74,6 @@
             <groupId>com.brsanthu</groupId>
             <artifactId>migbase64</artifactId>
             <version>2.2</version>
-        </dependency>
-
-        <!-- test dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- logger -->
@@ -118,6 +114,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
@@ -146,7 +143,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>clean-additional-generated-files</id>
@@ -172,7 +169,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>${java-version}</source>
                     <target>${java-version}</target>
@@ -181,7 +178,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
